Section 7 Services & Networking/network-policy-internal-egress-policy-lab-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - port: 8080
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - port: 3306
      protocol: TCP
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
